--- a/platform_device_id/android/build.gradle
+++ b/platform_device_id/android/build.gradle
@@ -2,7 +2,8 @@ group 'com.di1shuai.platform_device_id'
 version '1.0-SNAPSHOT'
 
 buildscript {
-    ext.kotlin_version = '1.3.50'
+    // 删除 Kotlin 版本限制
+    // ext.kotlin_version = '1.3.50'
     repositories {
         google()
         jcenter()
